--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -28,13 +28,13 @@ img {
   margin: 2px;
   text-align: center;
   line-height: 40px;
-  font-size: 30px;
+  font-size: 15px;
   width: 1140px;
 }
 .main{
     display: flex;
     background-color: black;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     /* padding: 0; */
@@ -51,7 +51,8 @@ img {
   padding: 0;
 
 } 
-@media  (max-width: 465px){
+@media  (max-width: 500px) {
+   
 .main{
     flex-wrap: wrap;
     }
@@ -72,3 +73,8 @@ height: 50%; */
   width: 100%;
 }
 }
+/* @media  (max-width: 900px) {
+    .main{
+        flex-wrap: nowrap;
+    }
+} */
